[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triplet-miner"
version = "0.1.0"
description = "Mine (anchor, positive, negative) triplets from git history for contrastive learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "SuperInstance"}]
keywords = ["triplet-mining", "contrastive-learning", "git", "embeddings", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
torch = ["torch"]
numpy = ["numpy"]
all = ["torch", "numpy"]
dev = ["pytest>=7.0", "pytest-cov", "torch", "numpy"]

[tool.setuptools.packages.find]
include = ["triplet_miner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
